# xeger

./: .coveragerc  .gitignore  .travis.yml  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
tests/: test_xeger.py
xeger/: __init__.py  xeger.py
xeger/tests/: __init__.py  test_xeger.py
