[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "xeger"
authors = [{name = "Colm O'Connor", email = "colm.oconnor.github@gmail.com"}]
license = {text = "BSD"}
description = "A library for generating random strings from a valid regular expression."
keywords = [
    "regular",
    "expressions",
    "regexp",
    "testing",
    "random",
    "generator",
]
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
]
urls = {Homepage = "https://github.com/crdoconnor/xeger"}
dynamic = ["version"]

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["docs"] # tests*
namespaces = false

[tool.setuptools_scm]
