[metadata]
name = xeger
author = Colm O'Connor
author_email = colm.oconnor.github@gmail.com
license = BSD
description = A library for generating random strings from a valid regular expression.
keywords =
    regular
    expressions
    regexp
    testing
    random
    generator
url = https://github.com/crdoconnor/xeger
long_description = file: README.rst
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = find:
zip_safe = False
test_suite = xeger.tests.suite

[options.packages.find]
exclude = docs; tests*
